--- a/pages/arte.html
+++ b/pages/arte.html
@@ -17,8 +17,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="shotcut icon" href="../img/LOGO32x32.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <meta name="description" content="Descubre animaciones web online aptas para navegadores, diseños de realidad virtual y galerias de instagram">
-    <meta name="keywords" content="desarrollo web, carrera, coderhouse, trabajo, online, expertos, mejores, full stack, frontend, backend, developer, portafolio, curso, animacion, web, webgl, digital, cuadros, joyas, 3d, impresion 3d, tienda, personal, perla negra">
+    <meta name="description"
+        content="Descubre animaciones web online aptas para navegadores, diseños de realidad virtual y galerias de instagram">
+    <meta name="keywords"
+        content="desarrollo web, carrera, coderhouse, trabajo, online, expertos, mejores, full stack, frontend, backend, developer, portafolio, curso, animacion, web, webgl, digital, cuadros, joyas, 3d, impresion 3d, tienda, personal, perla negra">
 
 
 
@@ -117,38 +119,38 @@
 
 
 
-        <section class="row g-0 bg-light flex-S " >
-            <div class="col-12 col-sm-6 artePadding">
-            <div class="arteZ">
-                <h1>ARTE</h1>
-                <p>
-                    A traves de la programacion encuentro plasmar las visiones e ideas
-                </p>
+        <section class="row g-0 bg-light flex-S ">
+            <div class="col-12 col-sm-6">
+                <div class="arteZ">
+                    <h1>ARTE</h1>
+                    <p>
+                        A traves de la programacion encuentro plasmar las visiones e ideas
+                    </p>
+
+                </div>
+
 
             </div>
-
-
-        </div>
-        <div class="col-12 col-sm-6 carrusel">
-            <div id="carouselExampleSlidesOnly" class="  carousel slide " data-bs-ride="carousel">
-                <div class="carousel-inner " >
-                    <div class="carousel-item active">
-                        <img src="../img/fungi1.jpg" class="d-block w-100" alt="seta de hongo 3D renderizado">
-                    </div>
-                    <div class="carousel-item ">
-                        <img src="../img/vacunas.jpg" class="d-block w-100" alt="cabeza de humano vacunas">
-                    </div>
-                    <div class="carousel-item ">
-                        <img src="../img/cables__38_.jpg" class="d-block w-100" alt="mandala de muchos colores">
+            <div class="col-12 col-sm-6 carrusel">
+                <div id="carouselExampleSlidesOnly" class="  carousel slide " data-bs-ride="carousel">
+                    <div class="carousel-inner ">
+                        <div class="carousel-item active">
+                            <img src="../img/fungi1.jpg" class="d-block w-100" alt="seta de hongo 3D renderizado">
+                        </div>
+                        <div class="carousel-item ">
+                            <img src="../img/vacunas.jpg" class="d-block w-100" alt="cabeza de humano vacunas">
+                        </div>
+                        <div class="carousel-item ">
+                            <img src="../img/cables__38_.jpg" class="d-block w-100" alt="mandala de muchos colores">
+                        </div>
                     </div>
                 </div>
+
             </div>
 
-        </div>
 
-        
 
-    </section>
+        </section>
 
         <section>
             <div class="bg-dark animacionText text-light">
@@ -235,6 +237,50 @@
 
         </section>
 
+        <section class="row g-4 mx-3  bg-dark text-light flex-S ">
+            <div class="col-12 col-sm-6 ">
+                <div class="iframesText">
+                    <h1>YOUTUBE</h1>
+                    <p>
+                        REALIDAD VIRTUAL DESARROLLADA EN BLENDER
+                    </p>
+                    <div>
+                        <a href="https://www.youtube.com/user/MaxiCrows/videos" target="_blank">Ver Mas</a>
+                    </div>
+
+                </div>
+
+
+            </div>
+
+            <div class=" col-12 col-sm-6">
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/YNu-bwhLcig" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
+        </section>
+        <section class="row g-3 m-3  bg-dark text-light flex-S ">
+
+
+            <div class=" col-12 col-sm-6">
+                <iframe width="100%" height="590" src="https://www.instagram.com/p/CanDKOsuVee/embed" frameborder="0"></iframe>
+            </div>
+            <div class="col-12 col-sm-6 ">
+                <div class="iframesText instDirection">
+                    <h1>INSTAGRAM</h1>
+                    <p>
+                        CONTENIDO EXCLUSIVO ESTUDIOS AUDIOVISUALES
+                    </p>
+                    <!-- <div>
+                        <a href="https://www.youtube.com/user/MaxiCrows/videos" target="_blank">Ver Mas</a>
+                    </div> -->
+
+                </div>
+
+
+            </div>
+        </section>
+
+
 
     </main>
 
@@ -251,7 +297,8 @@
             </div>
             <div class="col d-flex flex-wrap align-items-center justify-content-center">
                 <div>
-                    <div class="col mixing7"><img src="../img/zetaalphalogo2.png"  width="100px" height="80%" id="logo"></div>
+                    <div class="col mixing7"><img src="../img/zetaalphalogo2.png" width="100px" height="80%" id="logo">
+                    </div>
                 </div>
 
             </div>
